# ImGuiBot

./: CMakeLists.txt  Car.cpp  Car.h  Client.cpp  Client.h  JSONHelper.cpp  JSONHelper.h  main.cpp
avtomobili/: Ferrari Enzo.json
include/ImGUI/backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
